# dotrix-android

./: .gitmodules  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/io/github/nnarain/dotrix/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gameboycore_jni.cpp
app/src/main/java/io/github/nnarain/dotrix/: MainActivity.java
app/src/main/java/io/github/nnarain/dotrix/gameboycore/: Color.java  GameboyCore.java  GameboyCoreWorker.java  KeyAction.java  KeyCode.java  ScanlineListener.java
app/src/main/java/io/github/nnarain/dotrix/screen/: ScreenView.java
app/src/main/java/io/github/nnarain/dotrix/ui/: Input.java  ScreenView.java
app/src/main/res/layout/: activity_main.xml  layout_ab_button.xml  layout_dpad.xml  layout_menu_button.xml  layout_selstart.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/nnarain/dotrix/: ExampleUnitTest.java
